# tsblocks

./: README.md  pyproject.toml
src/tsblocks/: __init__.py  aggregation.py  core.py  masking.py  preprocessing.py  slicing.py  splits.py
tests/: test_aggregation.py  test_core.py  test_masking.py  test_slicing.py  test_splits.py
